--- a/Voting-Circuit/Cargo.toml
+++ b/Voting-Circuit/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 rayon = "1.10.0"
-ark-bn254 = "0.4.0"
+ark-bn254 = { git = "https://github.com/arkworks-rs/algebra", package = "ark-bn254", features = ["r1cs"] }
 ark-ed-on-bn254 = { version = "^0.4.0", features = ["r1cs"] }
 ark-crypto-primitives = { version = "0.4.0", default-features = true, features = [
     "r1cs",
@@ -41,6 +41,8 @@ sha3 = "0.10.8"
 ark-ed-on-bls12-381 = "0.4.0"
 lazy_static = "1.5.0"
 arkworks-r1cs-gadgets = "1.2.0"
+sha2 = "0.10.8"
+num-traits = "0.2.19"
 
 [features]
 print-trace = ["ark-std/print-trace"]
